progs/tests/constant/declaration_order_wrong.sy
a :: b
b :: 1

start :: fn {
    a <=> b
}

// error: #InvalidProgram
// error: #InvalidProgram
